tdf#132174 Chart DOCX import: fix label number format

The inner data table of charts has no own cell number format,
unlike the MSO embedded XLSX, so we always have to set the link
number format to false, if we have an inner data table.

Regression from commit: 9c1063ba13028244346528e307d5563d6faf949d
(tdf#129173 tdf#129175 Fix number format of data labels)

Change-Id: I5e7865cb8c19fc6fae5b68305c7dc302516c0ad4